--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,16 @@ android {
     }
 }
 
+
+
 dependencies {
     def room_version = "2.2.0-alpha02"
     def lifecycle_version = "2.0.0"
+    def nav_version = "2.1.0-rc01"
+
+    // Navigation components
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 
     // Room components
     implementation "androidx.room:room-runtime:$room_version"
